--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="shortcup icon" href="img/favicon.png">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    <h1>Calculator</h1>
     <div class="calculator">
         <div>
             <input type="text" class="display" disabled>
